--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -32,7 +32,7 @@
     app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recView"
+        android:id="@+id/routeRecView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -74,7 +74,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/listSizeHeaderTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -113,7 +113,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintStart_toEndOf="@+id/listSizeHeaderTextView"
             app:layout_constraintTop_toBottomOf="@+id/businessAddressesTextView" />
 
         <TextView
