--- a/app/src/main/res/layout/travel_information.xml
+++ b/app/src/main/res/layout/travel_information.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/text_view_background">
 
     <TextView
-        android:id="@+id/destination"
+        android:id="@+id/destinationTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -17,44 +17,44 @@
         android:ellipsize="end"
         android:maxLines="1"
         android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/openMapButton"
-        app:layout_constraintStart_toEndOf="@+id/position"
+        app:layout_constraintEnd_toStartOf="@+id/goButton"
+        app:layout_constraintStart_toEndOf="@+id/positionTextView"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/travelTime"
+        android:id="@+id/travelTimeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toEndOf="@+id/distanceTextView"
+        app:layout_constraintTop_toBottomOf="@+id/destinationTextView"
+        android:layout_marginLeft="8dp" />
+
+    <TextView
+        android:id="@+id/distanceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@+id/distance"
-        app:layout_constraintTop_toBottomOf="@+id/destination" />
+        app:layout_constraintStart_toEndOf="@+id/positionTextView"
+        app:layout_constraintTop_toBottomOf="@+id/destinationTextView" />
 
     <TextView
-        android:id="@+id/distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toEndOf="@+id/position"
-        app:layout_constraintTop_toBottomOf="@+id/destination" />
-
-    <TextView
-        android:id="@+id/deliveryTime"
+        android:id="@+id/deliveryTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/position"
-        app:layout_constraintTop_toBottomOf="@+id/distance" />
+        app:layout_constraintStart_toEndOf="@+id/positionTextView"
+        app:layout_constraintTop_toBottomOf="@+id/distanceTextView"
+        android:layout_marginLeft="8dp" />
 
     <TextView
-        android:id="@+id/position"
+        android:id="@+id/positionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -64,7 +64,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/openMapButton"
+        android:id="@+id/goButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
