--- a/app/src/main/res/layout/activity_comment_input.xml
+++ b/app/src/main/res/layout/activity_comment_input.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jason.route_application_kotlin.features.CommentInput.CommentInputActivity">
+    tools:context="com.example.jason.route_application_kotlin.features.commentInput.CommentInputActivity">
 
     <TextView
         android:id="@+id/employeeNameTextView"
