--- a/app/src/main/res/layout/invalid_addresses.xml
+++ b/app/src/main/res/layout/invalid_addresses.xml
@@ -7,20 +7,6 @@
     android:layout_height="wrap_content"
     android:background="@drawable/text_view_background">
 
-    <TextView
-        android:id="@+id/invalidAddress"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/removeAddressBtn"
         android:layout_width="wrap_content"
@@ -48,5 +34,20 @@
         app:layout_constraintStart_toEndOf="@+id/removeAddressBtn"
         app:layout_constraintTop_toBottomOf="@+id/invalidAddress"
         android:layout_marginRight="8dp" />
+
+    <EditText
+        android:id="@+id/invalidAddress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text=""
+        android:hint="Correct Address"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
