--- a/app/src/main/res/layout/activity_correct_invalid_addresses.xml
+++ b/app/src/main/res/layout/activity_correct_invalid_addresses.xml
@@ -11,6 +11,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/submitAddressesBtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +35,7 @@
         android:id="@+id/submitAddressesBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:text="Submit addresses"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
