--- a/app/src/main/res/layout/activity_route_input.xml
+++ b/app/src/main/res/layout/activity_route_input.xml
@@ -56,9 +56,9 @@
 
     <TextView
         android:id="@+id/phoneTextView"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:autoLink="phone"
@@ -67,27 +67,8 @@
         android:padding="7dp"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimary"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addressTextView" />
-
-    <TextView
-        android:id="@+id/attTextView"
-        android:layout_width="0dp"
-        android:layout_height="31dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:autoLink="web"
-        android:background="@drawable/text_view_background"
-        android:hint="Attr"
-        android:padding="7dp"
-        android:textColor="@color/colorPrimaryDark"
-        android:textColorHint="@color/colorPrimary"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toRightOf="@+id/phoneTextView"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addressTextView" />
 
     <Button
@@ -108,7 +89,7 @@
         android:text="Submit route"
         app:layout_constraintEnd_toStartOf="@+id/getRouteBtn"
         app:layout_constraintStart_toEndOf="@+id/addAddressToListBtn"
-        app:layout_constraintTop_toBottomOf="@+id/attTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recView"
@@ -166,6 +147,6 @@
         android:layout_marginTop="8dp"
         android:text="Get Route"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/attTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />
 
 </android.support.constraint.ConstraintLayout>
