--- a/app/src/main/res/layout/activity_route_input.xml
+++ b/app/src/main/res/layout/activity_route_input.xml
@@ -13,8 +13,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:hint="Enter Place Here"
-        android:textColor="@color/colorPrimary"
+        android:hint="@string/enter_place_here.Activity_route_input"
+        android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimary"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -30,10 +30,12 @@
         android:layout_below="@+id/autoCompleteTextView"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
-        android:text="Selected Place:"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="@string/selected_place.Activity_route_input"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/addressTextView"
@@ -45,7 +47,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/text_view_background"
-        android:hint="Address"
+        android:hint="@string/address.Activity_route_input"
         android:padding="7dp"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimary"
@@ -63,7 +65,7 @@
         android:layout_marginTop="8dp"
         android:autoLink="phone"
         android:background="@drawable/text_view_background"
-        android:hint="Phone"
+        android:hint="@string/phone.Activity_route_input"
         android:padding="7dp"
         android:textColor="@color/colorPrimaryDark"
         android:textColorHint="@color/colorPrimary"
@@ -76,17 +78,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Add"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/buttons_style"
+        android:text="@string/add.Activity_route_input"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" android:layout_marginStart="16dp"/>
 
     <Button
         android:id="@+id/submitRouteBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Submit route"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/buttons_style"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="@string/submit_route.Activity_route_input"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/getRouteBtn"
         app:layout_constraintStart_toEndOf="@+id/addAddressToListBtn"
         app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />
@@ -95,14 +103,8 @@
         android:id="@+id/recView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listSizeHeaderTextView" />
@@ -113,9 +115,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
-        android:text="List size:"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="@string/list_size.Activity_route_input"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addAddressToListBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/addAddressToListBtn"
+        android:layout_marginStart="16dp" />
 
     <TextView
         android:id="@+id/listSizeTextView"
@@ -123,8 +128,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="16dp"
+        android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintLeft_toRightOf="@+id/listSizeHeaderTextView"
-        app:layout_constraintTop_toBottomOf="@+id/addAddressToListBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/addAddressToListBtn"
+        android:layout_marginStart="8dp" />
 
     <EditText
         android:id="@+id/routeCodeInputEditText"
@@ -134,7 +142,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Enter route code here"
+        android:hint="@string/enter_route_code_here.Activity_route_input"
+        android:textColorHint="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -144,8 +154,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:text="Get Route"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/buttons_style"
+        android:text="@string/get_route.Activity_route_input"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />
 
