--- a/app/src/main/res/layout/list_single_address.xml
+++ b/app/src/main/res/layout/list_single_address.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
     android:background="@drawable/text_view_background">
 
     <TextView
@@ -14,6 +14,7 @@
         android:layout_marginRight="16dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
