--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#336b87</color>
+    <color name="colorPrimaryDark">#2a3132</color>
+    <color name="colorAccent">#90afc5</color>
+    <color name="white">#ffffff</color>
 </resources>
