--- a/app/src/main/res/layout/activity_comment_display.xml
+++ b/app/src/main/res/layout/activity_comment_display.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="@string/employee_name.activity_comment_display"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="16dp" />
@@ -23,7 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="@string/date.activity_comment_display"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/employeeNameTextView"
         android:layout_marginLeft="16dp" />
@@ -36,7 +38,8 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
+        android:textColor="@color/colorPrimaryDark"
+        android:text="@string/comment.activity_comment_display"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
