--- a/app/src/main/res/layout/activity_route_input.xml
+++ b/app/src/main/res/layout/activity_route_input.xml
@@ -46,7 +46,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/text_view_background"
+        android:background="@drawable/textview_background"
         android:hint="@string/address.Activity_route_input"
         android:padding="7dp"
         android:textColor="@color/colorPrimaryDark"
@@ -64,7 +64,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:autoLink="phone"
-        android:background="@drawable/text_view_background"
+        android:background="@drawable/textview_background"
         android:hint="@string/phone.Activity_route_input"
         android:padding="7dp"
         android:textColor="@color/colorPrimaryDark"
@@ -159,6 +159,7 @@
         android:text="@string/get_route.Activity_route_input"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/phoneTextView"
+        android:layout_marginRight="16dp" />
 
 </android.support.constraint.ConstraintLayout>
