--- a/app/src/main/res/layout/list_travel_information.xml
+++ b/app/src/main/res/layout/list_travel_information.xml
@@ -2,16 +2,16 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/text_view_background">
+    android:background="@drawable/list_row_background">
 
     <TextView
         android:id="@+id/streetTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ellipsize="end"
@@ -19,9 +19,8 @@
         android:text="@string/street.list_travel_information"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
-        app:layout_constraintStart_toEndOf="@+id/positionTextView"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintStart_toEndOf="@+id/addressTypeImageView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/cityTextView"
@@ -35,7 +34,7 @@
         android:text="@string/city.list_travel_information"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toStartOf="@+id/goBtn"
-        app:layout_constraintStart_toEndOf="@+id/positionTextView"
+        app:layout_constraintStart_toEndOf="@+id/addressTypeImageView"
         app:layout_constraintTop_toBottomOf="@+id/streetTextView" />
 
     <TextView
@@ -43,27 +42,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/distance.list_travel_information"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/positionTextView"
-        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />
+        app:layout_constraintStart_toEndOf="@+id/addressTypeImageView"
+        app:layout_constraintTop_toBottomOf="@+id/cityTextView"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:id="@+id/positionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="@string/position.list_travel_information"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
+        android:visibility="visible"
+        app:layout_constraintEnd_toStartOf="@+id/streetTextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/goBtn"
@@ -71,9 +72,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
+        android:contentDescription="@string/goBtn.list_travel_information"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_go_button"
+        app:srcCompat="@drawable/ic_go_button4"
         android:layout_marginRight="16dp" />
 
     <TextView
@@ -81,12 +83,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="@string/duration.list_travel_information"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/distanceTextView" />
+        app:layout_constraintStart_toEndOf="@+id/distanceTextView"
+        app:layout_constraintTop_toBottomOf="@+id/cityTextView"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:id="@+id/estimatedArrivalTimeTextView"
@@ -94,12 +98,23 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:text="arrival time"
+        android:layout_marginRight="16dp"
+        android:text="@string/arrival_time.list_travel_information"
         android:textColor="@color/colorPrimaryDark"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/goBtn"
-        android:layout_marginRight="16dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
+        android:id="@+id/addressTypeImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:contentDescription="@string/addressType.list_travel_information"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/positionTextView"
+        app:srcCompat="@drawable/ic_private_address2"
+        android:layout_marginLeft="8dp" />
 
 </android.support.constraint.ConstraintLayout>
