--- a/app/src/main/res/layout/reform_address_dialog.xml
+++ b/app/src/main/res/layout/reform_address_dialog.xml
@@ -12,8 +12,8 @@
         android:layout_marginBottom="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:background="@color/colorAccent"
-        android:text="Cancel"
+        android:background="@drawable/buttons_style"
+        android:text="@string/cancel.reform_address_dialog"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/changeAddressBtn"
@@ -28,8 +28,8 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
-        android:background="@color/colorAccent"
-        android:text="Change"
+        android:background="@drawable/buttons_style"
+        android:text="@string/change.reform_address_dialog"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Address"
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorPrimary"
+        android:hint="@string/address.reform_address_dialog"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,8 +61,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:textStyle="bold"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_marginTop="16dp"
-        android:text="Correct the address"
+        android:text="@string/correct_the_address.reform_address_dialog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
