--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,9 @@
     <color name="colorPrimaryDark">#2a3132</color>
     <color name="colorAccent">#90afc5</color>
     <color name="white">#ffffff</color>
+    <color name="grey">#505160</color>
+    <color name="overcast">#F1F1F2</color>
+    <color name="warmGrey">#bcbabe</color>
+    <color name="ice">#a1d6e2</color>
+    <color name="glacierBlue">#1995AD</color>
 </resources>
