--- a/app/src/main/res/layout/list_travel_information.xml
+++ b/app/src/main/res/layout/list_travel_information.xml
@@ -11,16 +11,17 @@
         android:id="@+id/streetTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:maxLines="1"
         android:text="@string/street.list_travel_information"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/addressTypeImageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/goBtn"/>
 
     <TextView
         android:id="@+id/cityTextView"
